; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libedit/extr_tty.c_tty__get_flag.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libedit/extr_tty.c_tty__get_flag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.termios = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.termios*, i32)* @tty__get_flag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @tty__get_flag(%struct.termios* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.termios*, align 8
  %5 = alloca i32, align 4
  store %struct.termios* %0, %struct.termios** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %19 [
    i32 130, label %7
    i32 128, label %10
    i32 131, label %13
    i32 129, label %16
  ]

7:                                                ; preds = %2
  %8 = load %struct.termios*, %struct.termios** %4, align 8
  %9 = getelementptr inbounds %struct.termios, %struct.termios* %8, i32 0, i32 3
  store i32* %9, i32** %3, align 8
  br label %21

10:                                               ; preds = %2
  %11 = load %struct.termios*, %struct.termios** %4, align 8
  %12 = getelementptr inbounds %struct.termios, %struct.termios* %11, i32 0, i32 2
  store i32* %12, i32** %3, align 8
  br label %21

13:                                               ; preds = %2
  %14 = load %struct.termios*, %struct.termios** %4, align 8
  %15 = getelementptr inbounds %struct.termios, %struct.termios* %14, i32 0, i32 1
  store i32* %15, i32** %3, align 8
  br label %21

16:                                               ; preds = %2
  %17 = load %struct.termios*, %struct.termios** %4, align 8
  %18 = getelementptr inbounds %struct.termios, %struct.termios* %17, i32 0, i32 0
  store i32* %18, i32** %3, align 8
  br label %21

19:                                               ; preds = %2
  %20 = call i32 (...) @abort() #2
  unreachable

21:                                               ; preds = %16, %13, %10, %7
  %22 = load i32*, i32** %3, align 8
  ret i32* %22
}

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
